исправление ошибок валидации, добавлен полифил для работы fetch в IE, редактирование Readme

--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,14 @@
                     <form action="" target="_self" method="post" class="modal__form">
                         <label class="modal__item">
                             <p class="modal__item-title">Email<span class="modal__required">*</span></p>
-                            <input type="email" name="email" class="modal__input input-email" placeholder="Введите email" required
-                                autofocus="true">
+                            <input type="email" name="email" class="modal__input input-email"
+                                placeholder="Введите email" autofocus="true">
                             <span class="modal__item-error email-err"></span>
                         </label>
                         <label class="modal__item">
                             <p class="modal__item-title">Телефон<span class="modal__required">*</span></p>
-                            <input type="text" name="phone" class="modal__input input-phone" placeholder="Введите телефон" required>
+                            <input type="text" name="phone" class="modal__input input-phone"
+                                placeholder="Введите телефон">
                             <span class="modal__item-error phone-err"></span>
                         </label>
                         <label class="modal__item">
@@ -38,7 +39,7 @@
                                         tabindex="0">
                                     <span>Ж</span></label>
                             </div>
-                            <span class="modal__item-error"></span>
+                            <span class="modal__item-error gender-err"></span>
                         </label>
                         <div class="modal__item age">
                             <p class="modal__item-title">Возраст</p>
